[package]
name = "safty-waf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safty = { path = "../safty" }
hyper = { version = "0.14.26", features = ["full"] }
tracing = "*"
once_cell = "*"
anyhow = "*"
async-trait = "*"
regex = "*"
