[package]
name = "safty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
tracing = "*"
anyhow = "*"
once_cell = "*"
async-trait = "*"
cookie = { version = "0.16.0", features = ["private", "key-expansion", "percent-encode"] }
base64 = "*"
multer = "2.1.0"
futures-util = "0.3.28"
rand = "*"
form_urlencoded = "1.1.0"
